# WizardMerge

./: .gitignore  BUILD.md  DROGON_CONVERSION.md  FINAL_SUMMARY.md  GITHUB_ISSUES_SUMMARY.md  GIT_CLI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PR_URL_IMPLEMENTATION.md  README.md  ROADMAP.md  extract_graphics.py  requirements.txt  wizardmerge.docx  wizardmerge.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/issues/: 01-project-specification.md  02-file-io-git-integration.md  03-semantic-merge-structured-files.md  04-ast-based-merging.md  05-sdg-analysis.md  06-multi-platform-support.md  07-core-ui-components.md  08-ai-assisted-merging.md  09-conflict-resolution-actions.md  10-testing-quality.md  README.md
.github/workflows/: README.md  ci.yml  mirror.yml  tlc.yml
backend/: CMakeLists.txt  Dockerfile  README.md  build.sh  conanfile.py  config.json  docker-compose.yml  install_drogon.sh
backend/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  wizardmerge-cli
backend/examples/: README.md  api_client.py  pr_resolve_example.py  test_api.sh  typescript_example.cpp
backend/include/wizardmerge/analysis/: context_analyzer.h  risk_analyzer.h
backend/include/wizardmerge/git/: git_cli.h  git_platform_client.h  github_client.h
backend/include/wizardmerge/merge/: three_way_merge.h
backend/src/: main.cpp
backend/src/analysis/: context_analyzer.cpp  risk_analyzer.cpp
backend/src/controllers/: MergeController.cc  MergeController.h  PRController.cc  PRController.h
backend/src/git/: git_cli.cpp  git_platform_client.cpp  github_client.cpp
backend/src/merge/: three_way_merge.cpp
backend/tests/: test_context_analyzer.cpp  test_git_cli.cpp  test_git_platform_client.cpp  test_github_client.cpp  test_risk_analyzer.cpp  test_three_way_merge.cpp
docs/: CONTEXT_RISK_ANALYSIS.md  PAPER.md  TYPESCRIPT_SUPPORT.md
extracted_graphics/: images.json
frontend/: README.md  package.json
frontend/app/: layout.tsx  page.tsx
frontends/: README.md
frontends/cli/: CMakeLists.txt  README.md
frontends/cli/include/: file_utils.h  http_client.h
frontends/cli/src/: file_utils.cpp  http_client.cpp  main.cpp
frontends/nextjs/: README.md  package.json
frontends/nextjs/app/: globals.css
frontends/qt6/: CMakeLists.txt  README.md
frontends/qt6/qml/: main.qml
frontends/qt6/src/: main.cpp
scripts/: README.md  ocr_pages.py  run_app.sh  setup.sh  tlaplus.py
spec/: WizardMergeSpec.cfg  WizardMergeSpec.tla
